tests/testfiles/passing/invalid_identifiers/keyword_as_id_for.c
/* Keyword as identifier: for */
int main() {
    int for;
}